namespace Tactics.Manager.PlayerInput {
    public enum PlayerInputButton {
        Down,
        Up,
        Left,
        Right,
        Accept,
        Back,
        EnemyToggle,
        Help,
        BackInTime,
        NextAlly,
        PreviousAlly,
        ZoomToggle,
        GameMenu,
        MapMenu
    }
}
